--- a/.htaccess
+++ b/.htaccess
@@ -4,9 +4,8 @@
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php?/$1 [L]
+    RewriteRule ^(.*)$ /index.php/$1 [L]
 </IfModule>
-
 
 # For localhost
 # <IfModule mod_rewrite.c>
@@ -15,5 +14,5 @@
 
 #     RewriteCond %{REQUEST_FILENAME} !-f
 #     RewriteCond %{REQUEST_FILENAME} !-d
-#     RewriteRule ^(.*)$ index.php?/$1 [L]
+#     RewriteRule ^(.*)$ index.php/$1 [L]
 # </IfModule>
